# local-sandbox

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  STATE.md  install.ps1  install.sh  justfile  plan.md  state.md
.github/workflows/: ci.yml  nodejs-binding.yml  publish-crates.yml  publish-sdk.yml  release.yml  release_nodejs.yml  windows-lsb-hardware.yml  windows-service-self-hosted.yml
bindings/nodejs/: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  package.json  tsconfig.json
bindings/nodejs/npm/darwin-arm64/: package.json
bindings/nodejs/npm/darwin-x64/: package.json
bindings/nodejs/npm/win32-x64-msvc/: README.md  package.json
bindings/nodejs/scripts/: patch-generated-loader.mjs  test-with-signed-node.sh  windows-preflight-smoke.mjs
bindings/nodejs/src/: config.rs  error.rs  lib.rs  service.rs  types.rs
bindings/nodejs/test/: api-shape.spec.ts  filesystem.spec.ts  helpers.ts  index.spec.ts  package-metadata.spec.ts  startup.spec.ts  streaming.spec.ts
contracts/: seawork-parity-v1.json  seawork-test-release-v1.json
crates/lsb-cli/: Cargo.toml
crates/lsb-cli/src/: assets.rs  checkpoint.rs  cli.rs  config.rs  doctor.rs  main.rs  stdio.rs  vm.rs
crates/lsb-guest/: Cargo.toml
crates/lsb-platform/: Cargo.toml
crates/lsb-proto/: Cargo.toml
crates/lsb-proto/src/: frame.rs  lib.rs  mount_cache.rs  mux.rs
crates/lsb-proxy/: Cargo.toml
crates/lsb-sdk/: Cargo.toml
crates/lsb-sdk/src/: assets.rs  fixes.rs  host_tools.rs  lib.rs  process.rs  progress.rs  runtime.rs  session.rs  types.rs  watch.rs
crates/lsb-seawork-service/: Cargo.toml  build.rs
crates/lsb-seawork-service/resources/: LocalSandboxSeaWork.mc
crates/lsb-seawork-service/src/: admission.rs  bundle.rs  config.rs  engine.rs  logging.rs  main.rs  maintenance.rs  network_policy.rs  paths.rs  pipe.rs  scm.rs  status.rs
crates/lsb-seawork-service/src/ipc/: connection.rs  mod.rs  pipe.rs  writer.rs
crates/lsb-seawork-service/src/ledger/: atomic.rs  mod.rs  reconcile.rs  recovery.rs  schema.rs  windows_cleaner.rs
crates/lsb-seawork-service/src/resource/: mod.rs  mount.rs  mount_sync.rs  network.rs  port.rs  process.rs  sandbox.rs  transaction.rs  vm.rs  watch.rs
crates/lsb-seawork-service/src/rpc/: file.rs  mod.rs  process.rs  sandbox.rs  watch.rs
crates/lsb-seawork-service/src/security/: access.rs  client_image.rs  descriptor.rs  impersonation.rs  mod.rs  process.rs  token.rs
crates/lsb-seawork-service/src/security/path/: export.rs  identity.rs  import.rs  mod.rs  monitor.rs  policy.rs  profiles.rs  relative.rs  snapshot.rs  walk.rs  worker.rs
crates/lsb-seawork-service/src/session/: cancel.rs  handle.rs  manager.rs  mod.rs  quota.rs
crates/lsb-seawork-service/src/update/: mod.rs
crates/lsb-seawork-service/src/windows/: job.rs  mod.rs  process.rs  wfp.rs  whpx.rs
crates/lsb-seawork-update/: Cargo.toml
crates/lsb-seawork-update/fixtures/: github-releases-hostile.json  github-releases-valid.json
crates/lsb-seawork-update/src/: archive.rs  committed.rs  discovery.rs  journal.rs  lib.rs  package.rs  policy.rs  preinstall.rs  state.rs  windows_trust.rs
crates/lsb-seawork-updater/: Cargo.toml  build.rs
crates/lsb-seawork-updater/src/: main.rs  recovery.rs  relative.rs  windows.rs
crates/lsb-service-client/: Cargo.toml  build.rs
crates/lsb-service-client/src/: authenticode.rs  connection.rs  error.rs  lib.rs  package_acl.rs  pipe.rs  stream.rs
crates/lsb-service-proto/: Cargo.toml
crates/lsb-service-spike/: Cargo.toml
crates/lsb-service-spike/src/: main.rs
crates/lsb-service-spike/tests/: windows_session0.rs
crates/lsb-store/: Cargo.toml
crates/lsb-store/src/: backend.rs  lib.rs  nbd.rs  windows_checkpoint.rs
crates/lsb-vm/: Cargo.toml
crates/lsb-vm/src/: lib.rs  mount_metrics.rs  sandbox.rs
crates/shuru-cli/: Cargo.toml
crates/shuru-darwin/: Cargo.toml
crates/shuru-guest/: Cargo.toml
crates/shuru-platform/: Cargo.toml
crates/shuru-proto/: Cargo.toml
crates/shuru-proxy/: Cargo.toml
crates/shuru-sdk/: Cargo.toml
crates/shuru-vm/: Cargo.toml
docs/: architecture.md  filesystem-cancellation.md  protected-ledger-reconciliation.md  seawork-parity-contract.md  seawork-service-release.md  seawork-test-release-handoff.md  seawork-update-evidence.md  service-diagnostics.md  staged-mount-sync.md  windows-acceptance-evidence.md  windows-agent-testing.md  windows-service-feasibility.md
docs/windows-port/: AGENTS.md  README.md  architecture.md  decisions.md  diagnostics.md  future-work.md  mvp-handoff.md  review-checklist.md  rfc-qemu-whpx.md  risk-register.md  runner-setup.md  security-checklist.md  validation.md
fixtures/seawork-parity/: host-connectivity.json  network-public-auth.json  skills-files.json  workspace-shell.json  (+1 more)
kernel/: lsb_defconfig  lsb_x86_64_defconfig  shuru_defconfig  shuru_x86_64_defconfig
scripts/: assemble-seawork-update-evidence.ps1  assemble-windows-evidence.ps1  benchmark-macos-secret-substitution-vs-user-agent-injection.sh  benchmark-macos-user-agent-injection.sh  benchmark-windows-overlay.ps1  benchmark-windows-secret-substitution-vs-user-agent-injection.ps1  benchmark-windows-user-agent-injection.ps1  build-kernel.sh  collect-windows-diagnostics.ps1  inspect-seawork-service-dependencies.ps1  package-seawork-node-release.ps1  prepare-rootfs.sh  prepare-seawork-release-metadata.ps1  prepare-windows-boot-assets.ps1  setup-windows-test-host.ps1  sign-seawork-service.ps1  test-windows-mount-cache-recovery.ps1  verify-seawork-event-messages.ps1  win-gh-test  win-test  windows-dev-test.ps1  windows-e2e.ps1  windows-service-spike.ps1  windows-smoke.ps1  windows-test-artifacts.ps1  windows-test-bootstrap.ps1  windows-test-reuse-candidate.ps1  windows-test-runtime-assets.ps1  windows-test-service-harness.ps1  windows-test-signing-assets.ps1  write-seawork-test-release-manifest.ps1
xtask/: Cargo.toml
xtask/src/: boot_asset.rs  context.rs  guest.rs  kernel.rs  main.rs  release.rs  rootfs.rs  seawork_parity.rs  seawork_release.rs  seawork_update_evidence.rs  windows_evidence.rs
(+128 files in other folders)
