[workspace]
resolver = "2"
members = [
    "crates/lsb-cli",
    "crates/lsb-platform",
    "crates/lsb-proto",
    "crates/lsb-proxy",
    "crates/lsb-sdk",
    "crates/lsb-service-spike",
    "crates/lsb-service-proto",
    "crates/lsb-service-client",
    "crates/lsb-seawork-service",
    "crates/lsb-vm",
    "crates/lsb-store",
    "crates/lsb-guest",
    "xtask",
]

[workspace.package]
version = "0.4.7"

[workspace.dependencies]
lsb-platform = { version = "0.4.7", path = "crates/lsb-platform" }
lsb-proto = { version = "0.4.7", path = "crates/lsb-proto" }
lsb-proxy = { version = "0.4.7", path = "crates/lsb-proxy" }
lsb-sdk = { version = "0.4.7", path = "crates/lsb-sdk" }
lsb-service-client = { version = "0.4.7", path = "crates/lsb-service-client" }
lsb-service-proto = { version = "0.4.7", path = "crates/lsb-service-proto" }
lsb-store = { version = "0.4.7", path = "crates/lsb-store" }
lsb-vm = { version = "0.4.7", path = "crates/lsb-vm" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.lsb-seawork-service]
debug = 1
strip = false
