[workspace]
resolver = "2"
members = [
    "crates/lsb-cli",
    "crates/lsb-platform",
    "crates/lsb-proto",
    "crates/lsb-proxy",
    "crates/lsb-sdk",
    "crates/lsb-service-spike",
    "crates/lsb-service-proto",
    "crates/lsb-service-client",
    "crates/lsb-seawork-service",
    "crates/lsb-seawork-update",
    "crates/lsb-seawork-updater",
    "crates/lsb-vm",
    "crates/lsb-store",
    "crates/lsb-guest",
    "xtask",
]

[workspace.package]
version = "0.5.0-rc.4"

[workspace.dependencies]
lsb-platform = { version = "0.5.0-rc.4", path = "crates/lsb-platform" }
lsb-proto = { version = "0.5.0-rc.4", path = "crates/lsb-proto" }
lsb-proxy = { version = "0.5.0-rc.4", path = "crates/lsb-proxy" }
lsb-sdk = { version = "0.5.0-rc.4", path = "crates/lsb-sdk" }
lsb-service-client = { version = "0.5.0-rc.4", path = "crates/lsb-service-client" }
lsb-service-proto = { version = "0.5.0-rc.4", path = "crates/lsb-service-proto" }
lsb-seawork-update = { version = "0.5.0-rc.4", path = "crates/lsb-seawork-update", default-features = false }
lsb-seawork-updater = { version = "0.5.0-rc.4", path = "crates/lsb-seawork-updater" }
lsb-store = { version = "0.5.0-rc.4", path = "crates/lsb-store" }
lsb-vm = { version = "0.5.0-rc.4", path = "crates/lsb-vm" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.lsb-seawork-service]
debug = 1
strip = false
