[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
crc32fast = "1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
lsb-platform = { path = "../crates/lsb-platform" }
lsb-service-proto = { path = "../crates/lsb-service-proto" }
