[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
crc32fast = "1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
lsb-service-proto = { path = "../crates/lsb-service-proto" }
semver = "1"
serde_json = { version = "1", features = ["preserve_order"] }
toml_edit = "0.22"
lsb-platform.workspace = true
