[package]
authors = ["SuperHQ"]
edition = "2021"
name = "shuru-nodejs"
version = "0.1.0"
description = "Native Node.js bindings for Shuru microVM sandboxes"
license = "Apache-2.0"
repository = "https://github.com/superhq-ai/shuru"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
napi = { version = "3.0.0", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
serde_json = "1"
shuru-proto = { path = "../../crates/shuru-proto" }
shuru-proxy = { path = "../../crates/shuru-proxy" }
shuru-sdk = { path = "../../crates/shuru-sdk" }
shuru-vm = { path = "../../crates/shuru-vm" }
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"

[workspace]
