[package]
authors = ["SuperHQ", "LocalSandBox"]
edition = "2021"
name = "lsb-nodejs"
version = "0.5.0-rc.4"
description = "Native Node.js bindings for lsb microVM sandboxes"
license = "Apache-2.0"
repository = "https://github.com/LocalSandBox/local-sandbox.git"

[features]
development-service = [
    "lsb-service-client/development-service",
    "lsb-service-proto/development-service",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
napi = { version = "3.0.0", default-features = false, features = [
    "napi8",
    "tokio_rt",
] }
napi-derive = "3.0.0"
lsb-service-proto = { path = "../../crates/lsb-service-proto" }

[target.'cfg(target_os = "macos")'.dependencies]
lsb-sdk = { path = "../../crates/lsb-sdk" }
tokio = { version = "1", features = ["rt", "sync"] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
lsb-sdk = { path = "../../crates/lsb-sdk" }
lsb-service-client = { path = "../../crates/lsb-service-client" }
tokio = { version = "1", features = ["rt", "sync"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"

[workspace]
