[package]
name = "lsb-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "lsb"
path = "src/main.rs"

[dependencies]
lsb-platform.workspace = true
lsb-vm.workspace = true
lsb-proto.workspace = true
lsb-proxy.workspace = true
lsb-sdk.workspace = true
lsb-store.workspace = true
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
base64 = "0.22.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
