[package]
name = "lsb-proto"
version.workspace = true
edition = "2021"
description = "Shared wire protocol for lsb host/guest communication"
license = "Apache-2.0"
repository = "https://github.com/LocalSandBox/local-sandbox.git"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
