[package]
name = "lsb-sdk"
version.workspace = true
edition = "2021"
description = "Async Rust SDK for lsb microVMs"
license = "Apache-2.0"
repository = "https://github.com/LocalSandBox/local-sandbox.git"

[dependencies]
lsb-platform.workspace = true
lsb-vm.workspace = true
lsb-proto.workspace = true
lsb-proxy.workspace = true
lsb-store.workspace = true
tokio = { version = "1", features = ["sync"] }
anyhow = "1"
flate2 = "1"
tar = "0.4"
tracing = "0.1"
serde_json = "1"
sha2 = "0.10"
ureq = "3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync"] }
