[package]
name = "lsb-seawork-service"
version.workspace = true
edition = "2021"
publish = false
build = "build.rs"

[features]
development-service = ["lsb-service-proto/development-service"]

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
getrandom = "0.3"
http = "1"
# Keep the service cross-buildable from non-Windows release hosts without MASM.
blake3 = { version = "1", features = ["pure"] }
lsb-service-proto.workspace = true
lsb-seawork-update = { workspace = true, features = ["coordinator-policy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
ureq = { version = "3", default-features = true }
zeroize = "1"
lsb-proxy.workspace = true

[target.'cfg(windows)'.dependencies]
lsb-vm.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
windows-service = "0.8.1"
windows-sys = { version = "0.61.2", features = [
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Security_WinTrust",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_EventLog",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell",
] }

[[bin]]
name = "localsandbox-seawork-service"
path = "src/main.rs"
