[package]
name = "lsb-seawork-update"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
getrandom = "0.3"
lsb-service-proto.workspace = true
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
