[package]
name = "lsb-seawork-updater"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
lsb-service-proto.workspace = true
lsb-seawork-update.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"

[target.'cfg(windows)'.dependencies]
lsb-service-client.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
windows-service = "0.8.1"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[[bin]]
name = "localsandbox-seawork-updater"
path = "src/main.rs"
