[package]
name = "lsb-service-client"
version = "0.4.6"
edition = "2021"
publish = false

[dependencies]
getrandom = "0.3"
lsb-service-proto = { path = "../lsb-service-proto" }
serde = "1"
serde_json = "1"
zeroize = "1"

[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
windows-service = "0.8.1"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
] }
