[package]
name = "lsb-service-client"
version.workspace = true
edition = "2021"
publish = false
build = "build.rs"

[features]
development-service = ["lsb-service-proto/development-service"]

[dependencies]
getrandom = "0.3"
lsb-service-proto.workspace = true
serde = "1"
serde_json = "1"
zeroize = "1"

[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
windows-service = "0.8.1"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Security_WinTrust",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
