[package]
name = "lsb-service-spike"
version.workspace = true
edition = "2021"
publish = false

[features]
default = []
windows-session0-spike = []

[dependencies]
anyhow = "1"
lsb-sdk.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.1"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
] }

[[bin]]
name = "lsb-service-spike"
path = "src/main.rs"

[[test]]
name = "windows_session0"
path = "tests/windows_session0.rs"
required-features = ["windows-session0-spike"]
